--- a/index.qmd
+++ b/index.qmd
@@ -1,22 +1,11 @@
 ---
-title: "NOAA quarto simple with R"
-subtitle: "A simple Quarto webpage with a book layout"
+title: "NOAA-SEFSC Gulf of Mexico stock assessment improvement roadmap"
+subtitle: "A reference page to plan and track research effort to improve stock assessment advice in the Gulf of Mexico"
 page-layout: full
 ---
 
-This is a template for a simple Quarto website that looks like a "book". This is a common format for documentation. It includes a GitHub Action that will build the website automatically when you make changes to the files. The NOAA palette and fonts has been added to `theme.scss`. The webpage will be on the `gh-pages` branch. Serving the website files from this branch is a common way to keep all the website files from cluttering your main branch. 
+This website is intended to provide a living roadmap for planning and tracking research and development effort towards improving stock assessment methods and workflows in the Gulf of Mexico. This roadmap will maintain up to date records of ongoing and planned research in NOAA's Southeast Fisheries Science Center Gulf of Mexico sustainable fisheries branch with a particular focus on research efforts carried out under a 5 year RESTORE FFO 2023 Actionable Science grant awarded in collaboration with Vaughan Analytics <https://restoreactscienceprogram.noaa.gov/projects/building-next-generation-fishery-forecasting-capacity>. Providing details of ongoing and planned research is intended to facilitate collaboration opportunities with research efforts in other regions and agencies as promoted through NOAA's NMFS Open Science intiative <https://nmfs-opensci.github.io/>. Additionally this roadmap is intended to facilitate improved stakeholder and user awareness of ongoing research efforts and priorities and provide an avenue for feedback and discussion. 
 
-The GitHub Action installs R so you can have R code in your qmd or Rmd files. Note, you do not need to make changes to your Rmd files unless your need Quarto features like cross-references.
+### Disclaimer
 
-## GitHub Set-up
-
-* Click the green "use template" button to make a repository with this content.  Make sure to make your repo public (since GitHub Pages doesn't work on private repos unless you have a paid account) and check box to include all the branches (so that you get the gh-pages branch).
-<img width="637" alt="image" src="https://user-images.githubusercontent.com/2545978/197051535-c43c62de-17e8-40bf-a536-3eea8db250c4.png">
-
-* Turn on GitHub Pages under Settings > Pages . You will set pages to be made from the gh-pages branch and root directory.
-<img width="540" alt="image" src="https://user-images.githubusercontent.com/2545978/196808262-3d2262be-b9b5-4897-bba5-fc2f056dd335.png">
-
-* Turn on GitHub Actions under Settings > Actions > General
-<img width="719" alt="image" src="https://user-images.githubusercontent.com/2545978/196808404-0c075fcf-db03-4516-88dd-3143b9fca475.png">
-
-* Edit the repo description and Readme to add a link to the webpage. When you edit the description, you will see the link url in the url box or you can click on the Actions tab or the  Settings > Pages page to find the url.
+This repository is a scientific product and is not official communication of the National Oceanic and Atmospheric Administration, or the United States Department of Commerce. All NOAA GitHub project content is provided on an ‘as is’ basis and the user assumes responsibility for its use. Any claims against the Department of Commerce or Department of Commerce bureaus stemming from the use of this GitHub project will be governed by all applicable Federal law. Any reference to specific commercial products, processes, or services by service mark, trademark, manufacturer, or otherwise, does not constitute or imply their endorsement, recommendation or favoring by the Department of Commerce. The Department of Commerce seal and logo, or the seal and logo of a DOC bureau, shall not be used in any manner to imply endorsement of any commercial product or activity by DOC or the United States Government.
